# WS_ObTr

./: BackGroundModel.cpp  BackGroundModel.h  CMakeLists.txt  ConsoleApplication1.sln  MCFile.h  MeanShiftTracker.cpp  MeanShiftTracker.h  MotionDetection.cpp  MotionDetection.h  ObjectForm.h  ObjectTracker.h  ObjectTrackerFactory.h  ObjectTracking.cpp  ObjectTracking.h  README.md  Tracking.cpp  Tracking.h  findComponent.cpp  findComponent.h  kernel.cu  kernel.h  main.cpp  motionDetection.cpp
ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  GeometricFuncs.h  MeanShiftTracker.cpp  ObjectForm.h  ObjectTracker.h  ObjectTrackerFactory.h  codebook.cpp  codebook.h  findComponent.cpp  main.cpp
ConsoleApplication1/Debug/: vc120.idb
ConsoleApplication1/Debug/ConsoleA.006D9D74.tlog/: CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConsoleApplication1/Release/ConsoleA.006D9D74.tlog/: CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConsoleApplication1/x64/Debug/: vc120.idb
ConsoleApplication1/x64/Debug/ConsoleA.006D9D74.tlog/: CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConsoleApplication1/x64/Release/ConsoleA.006D9D74.tlog/: ConsoleApplication1.lastbuildstate  cl.read.1.tlog  (+5 more)
Debug/: ConsoleApplication1.ilk
x64/Debug/: ConsoleApplication1.ilk
